Fix summary block spacing

--- a/app/assets/styles/explore/_single.scss
+++ b/app/assets/styles/explore/_single.scss
@@ -248,12 +248,7 @@
   padding: $global-spacing;
   box-shadow: 0 1px 0 0 $base-alpha-color;
 
-  &:first-child {
-    margin-top: -$global-spacing;
-  }
-
   &:last-child {
-    margin-bottom: -$global-spacing;
     box-shadow: none;
   }
 
